Added AWS marketplace option
Signed-off-by: pragrawal10 <pragrawal@purestorage>

--- a/modules/kubernetes-addons/portworx/values.yaml
+++ b/modules/kubernetes-addons/portworx/values.yaml
@@ -106,6 +106,8 @@ serviceAccount:
 
 eksServiceAccount: ${eksServiceAccount}
 
+awsMarketplace: ${useAWSMarketplace}
+
 clusterToken:
   create: true                    # Create cluster token
   secretName: px-vol-encryption    # Name of kubernetes secret to be created. Requires clusterToken.create to be true.
