credentials secret creation
Signed-off-by: pragrawal10 <pragrawal@purestorage>

--- a/modules/kubernetes-addons/portworx/values.yaml
+++ b/modules/kubernetes-addons/portworx/values.yaml
@@ -104,9 +104,12 @@ serviceAccount:
     create: true
     name: 
 
-eksServiceAccount: ${eksServiceAccount}
+aws:  
+  awsMarketplace: ${useAWSMarketplace}
+  eksServiceAccount: ${eksServiceAccount}
+  awsAccessKeyId: ${}
+  awsSecretAccessKey: ${awsSecretAccessKey}
 
-awsMarketplace: ${useAWSMarketplace}
 
 clusterToken:
   create: true                    # Create cluster token
