--- a/modules/kubernetes-addons/portworx/values.yaml
+++ b/modules/kubernetes-addons/portworx/values.yaml
@@ -107,7 +107,7 @@ serviceAccount:
 aws:  
   awsMarketplace: ${useAWSMarketplace}
   eksServiceAccount: ${eksServiceAccount}
-  awsAccessKeyId: ${}
+  awsAccessKeyId: ${awsAccessKeyId}
   awsSecretAccessKey: ${awsSecretAccessKey}
 
 
